[package]
name = "tokio-webserver"
version = "0.0.1"
edition = "2018"

[dependencies]
tokio = { version = "1", features = ["full"] }
config ="0.10"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
lazy_static = "1.4"
warp = "0.3"
couch_rs = "0.8"
reqwest = "0.11"
thiserror = "1.0"
